- Started working on the base site

--- a/index.html
+++ b/index.html
@@ -1,2 +1,26 @@
-<img src="/banner.jpg"/>
-<h1>Drone Fan Québec</h1>
+<!DOCTYPE html>
+<html lang="fr">
+  <head>
+    <title>Festival Drone Fan Québec</title>
+    <style>
+        *{
+            font-family: 'Roboto', sans-serif;
+        }
+        .banner {
+            text-align: center;
+            width: 100%;
+
+            img{
+                max-width: 100%;
+            }
+        }
+    </style>
+  </head>
+  <body>
+    <div class="banner">
+      <img src="/banner.jpg"/>
+      <h1>Festival Drone Fan Québec</h1>
+      <div>Événement en construction...</div>
+    </div>
+  </body>
+</html>
