--- a/index.html
+++ b/index.html
@@ -2,25 +2,164 @@
 <html lang="fr">
   <head>
     <title>Festival Drone Fan Québec</title>
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <style>
-        *{
-            font-family: 'Roboto', sans-serif;
+        * {
+            font-family: "Roboto", sans-serif;
         }
-        .banner {
-            text-align: center;
-            width: 100%;
 
-            img{
-                max-width: 100%;
+        html, body {
+            min-height: 100vh;
+            margin: 0;
+            padding: 0;
+            background-image: url("/Festival_Drone_header.jpg");
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-position: top center;
+        }
+
+        .banner {
+            min-height: 100vh;
+            text-align: center;
+            height: 100%;
+            width: calc(100% - 1rem);
+            display: flex;
+            flex-direction: row;
+            align-items: stretch;
+            justify-content: center;
+            padding: 0 0.5rem;
+        }
+
+        .banner-content {
+            display: flex;
+            flex-direction: column;
+            gap: 5rem;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .middle-content {
+            display: flex;
+            flex-direction: column;
+            gap: 1rem;
+            align-items: center;
+            justify-content: center;
+        }
+
+        @media (min-width: 500px) {
+            .middle-content {
+                display: flex;
+                flex-direction: row;
+                gap: 5rem;
+                align-items: center;
+                justify-content: center;
             }
+        }
+
+        .social{
+            a{
+                height: 2rem;
+                width: 2rem;
+            }
+            svg{
+                height: 2rem;
+                width: 2rem;
+                fill: white;
+            }
+        }
+
+        .drone-logo {
+            width: 150px;
+            filter: drop-shadow(0 0 5px hsla(0, 0%, 100%, 0.3));
+
+        img {
+            width: 100%;
+        }
+
+        }
+
+        .date-img {
+            width: 150px;
+
+        img {
+            width: 100%;
+        }
+
+        }
+
+        .split {
+            height: 100%;
+            width: 1px !important;
+            background-color: white;
+        }
+
+        .text-img {
+            margin-top: 1rem;
+            max-width: 500px;
+            min-width: 100%;
+
+        img {
+            width: 100%;
+        }
+
+        }
+
+        .call-to-action {
+            position: relative;
+            text-decoration: none;
+            color: white;
+            text-transform: uppercase;
+            font-weight: bold;
+            letter-spacing: 0.125rem;
+            padding: 1rem 4.5rem 1rem 2rem;
+            background-color: hsl(0, 58%, 41%);
+            box-shadow: 0 0 10px hsla(0, 0%, 100%, 0.1);
+            transition: 0.25s all;
+
+        &:hover {
+            background-color: hsl(0, 63%, 46%);
+        }
+
+        svg {
+            position: absolute;
+            fill: white;
+            width: 2rem;
+            top: calc(50% - 1rem);
+            right: 2rem;
+        }
+
         }
     </style>
   </head>
   <body>
     <div class="banner">
-      <img src="/banner.jpg"/>
-      <h1>Festival Drone Fan Québec</h1>
-      <div>Événement en construction...</div>
+      <div class="banner-content">
+        <div class="text-img">
+          <img src="/logo-festival-drone-ecriture.png"/>
+        </div>
+        <div class="middle-content">
+          <div class="drone-logo">
+            <img src="/logo-drone.png"/>
+          </div>
+          <div class="split"></div>
+          <div class="date-img">
+            <img src="/date-30-aout.png"/>
+          </div>
+        </div>
+        <a class="call-to-action"
+           href="https://app.hi.events/event/839/festival-drone-fan-quebec">
+          <span>Achetez vos billets maintenant</span>
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>arrow-right</title>
+            <path d="M4,11V13H16L10.5,18.5L11.92,19.92L19.84,12L11.92,4.08L10.5,5.5L16,11H4Z"/>
+          </svg>
+        </a>
+        <div class="social">
+          <a href="https://www.facebook.com/groups/963252338468683" target="_blank">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>facebook</title><path d="M12 2.04C6.5 2.04 2 6.53 2 12.06C2 17.06 5.66 21.21 10.44 21.96V14.96H7.9V12.06H10.44V9.85C10.44 7.34 11.93 5.96 14.22 5.96C15.31 5.96 16.45 6.15 16.45 6.15V8.62H15.19C13.95 8.62 13.56 9.39 13.56 10.18V12.06H16.34L15.89 14.96H13.56V21.96A10 10 0 0 0 22 12.06C22 6.53 17.5 2.04 12 2.04Z" /></svg>
+          </a>
+        </div>
+      </div>
     </div>
   </body>
 </html>
