--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         .banner-content {
             display: flex;
             flex-direction: column;
-            gap: 5rem;
+            gap: 3rem;
             justify-content: center;
             align-items: center;
         }
@@ -58,6 +58,8 @@
         }
 
         .social{
+            margin-bottom: 1rem;
+
             a{
                 height: 2rem;
                 width: 2rem;
