--- a/index.html
+++ b/index.html
@@ -115,12 +115,13 @@
             font-weight: bold;
             letter-spacing: 0.125rem;
             padding: 1rem 4.5rem 1rem 2rem;
-            background-color: hsl(0, 58%, 41%);
-            box-shadow: 0 0 10px hsla(0, 0%, 100%, 0.1);
+            background-color: hsl(0, 63%, 46%);
+            filter: drop-shadow(0 5px 10px hsla(0, 0%, 0%, 0.5));
             transition: 0.25s all;
 
         &:hover {
-            background-color: hsl(0, 63%, 46%);
+             background-color: hsl(0, 66%, 49%);
+             filter: drop-shadow(0 7px 12px hsla(0, 0%, 0%, 0.8));
         }
 
         svg {
