--- a/index.html
+++ b/index.html
@@ -18,10 +18,9 @@
         }
 
         body {
-            font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+            font-family: "Roboto", Tahoma, Geneva, Verdana, sans-serif;
             line-height: 1.6;
             color: #333333;
-            /*background: linear-gradient(135deg, var(--dfq-pale-red) 0%, var(--dfq-red) 100%);*/
             min-height: 100vh;
         }
 
@@ -88,7 +87,7 @@
             background: url("/Festival_Drone_header.jpg");
             background-repeat: no-repeat;
             background-size: cover;
-            background-position: center;
+            background-position: right;
         }
 
         @keyframes float {
@@ -208,7 +207,7 @@
         }
 
         .section {
-            padding: 4rem 0;
+            padding: 2rem 0;
             border-bottom: 1px solid #f0f0f0;
         }
 
@@ -271,6 +270,16 @@
             transform: scale(1.05);
         }
 
+        .drone-model-img {
+            width: 100%;
+            aspect-ratio: 1/1;
+            background-size: contain;
+            background-position: center;
+            background-color: white;
+            background-repeat: no-repeat;
+            border-radius: 20px;
+        }
+
         .audience-list {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
@@ -286,13 +295,8 @@
             transition: all 0.3s ease;
         }
 
-        .audience-item:hover {
-            background: var(--dfq-red-l4);
-            transform: translateX(10px);
-        }
-
         .map-container {
-            background: #f8f9ff;
+            background: var(--dfq-red-l5);
             padding: 2rem;
             border-radius: 20px;
             margin: 2rem 0;
@@ -332,13 +336,13 @@
         }
 
         .notes-list li {
-            margin: 0.5rem 0;
+            margin: 0.5rem 1rem;
             padding-left: 1.5rem;
             position: relative;
         }
 
         .notes-list li::before {
-            content: "⚠️";
+            content: "-";
             position: absolute;
             left: 0;
         }
@@ -377,6 +381,10 @@
 
         /* Responsive */
         @media (max-width: 768px) {
+            .hero {
+                background-position: center;
+            }
+
             .hero h1 {
                 font-size: 2.5rem;
             }
@@ -454,7 +462,11 @@
       <div class="container">
         <div class="hero-content">
           <h1>Festival Drone Fan Québec 2025</h1>
-          <p class="hero-subtitle">Premier événement québécois dédié exclusivement au monde des drones</p>
+          <p class="hero-subtitle">
+            <img src="/Flag_of_Quebec.png" style="height: 1em" alt="QC">
+            Premier événement québécois dédié exclusivement au monde des drones
+            <img src="/Flag_of_Quebec.png" style="height: 1em" alt="QC">
+          </p>
 
           <div class="event-details">
             <div class="detail-card">
@@ -496,7 +508,7 @@
     <div class="main-content">
       <div class="container">
         <section id="programme" class="section">
-          <h2 class="section-title">Au Programme</h2>
+          <h2 class="section-title">Au programme</h2>
 
           <div class="program-grid">
             <div class="program-card">
@@ -528,7 +540,7 @@
             </div>
 
             <div class="program-card">
-              <h3><i class="fas fa-eye"></i> Démonstrations de vol</h3>
+              <h3><i class="fas fa-eye"></i> Démonstrations de drones</h3>
               <p>Démonstration de plusieurs modèles de drones en vol</p>
             </div>
           </div>
@@ -537,16 +549,47 @@
             <h3
               style="text-align: center; margin-bottom: 2rem; color: var(--dfq-red);">Modèles de drones en démonstration</h3>
             <div class="drone-models">
-              <div class="drone-model">DJI Mini Pro 4</div>
-              <div class="drone-model">Autel EVO II Pro</div>
-              <div class="drone-model">DJI Mavic 3 Pro</div>
-              <div class="drone-model">DJI Matrice 4 T</div>
-              <div class="drone-model">DJI Inspire 2</div>
-              <div class="drone-model">DJI Mavic 3 Entreprise</div>
-              <div class="drone-model">DJI Matrice 30T</div>
-              <div class="drone-model">Volt Hercules 20</div>
-              <div class="drone-model">DJI Agras T25</div>
-              <div class="drone-model">DJI Agras T50</div>
+              <div class="drone-model">
+                DJI Mini Pro 4
+                <div class="drone-model-img" style="background-image: url('/DJI Mini Pro 4.png')"></div>
+              </div>
+              <div class="drone-model">
+                Autel EVO II Pro
+                <div class="drone-model-img" style="background-image: url('/Autel EVO II.png')"></div>
+              </div>
+              <div class="drone-model">
+                DJI Mavic 3 Pro
+                <div class="drone-model-img" style="background-image: url('/DJI Mavic 3 Pro.jpg')"></div>
+              </div>
+              <div class="drone-model">
+                DJI Matrice 4 T
+                <div class="drone-model-img" style="background-image: url('/DJI Matrice 4 T.webp')"></div>
+              </div>
+              <div class="drone-model">
+                DJI Inspire 2
+                <div class="drone-model-img" style="background-image: url('/DJI Inspire 2.png')"></div>
+              </div>
+              <div class="drone-model">
+                DJI Mavic 3 Entreprise
+                <div class="drone-model-img" style="background-image: url('/DJI Mavic 3 enterprise.png')"></div>
+              </div>
+              <div class="drone-model">
+                DJI Matrice 30T
+                <div class="drone-model-img" style="background-image: url('/DJI Matrice 30T.png')"></div>
+              </div>
+              <div class="drone-model">
+                Volt Hercules 20
+                <div class="drone-model-img"
+                     style="background-image: url('/no drone.png')"></div>
+              </div>
+              <div class="drone-model">
+                DJI Agras T25
+                <div class="drone-model-img" style="background-image: url('/DJI Agras T25.webp')"></div>
+              </div>
+              <div class="drone-model">
+                DJI Agras T50
+                <div class="drone-model-img" style="background-image: url('/DJI Agras T50.webp')"></div>
+              </div>
             </div>
           </div>
         </section>
@@ -565,7 +608,7 @@
               <strong>Agriculteurs</strong> qui veulent voir comment les drones peuvent les aider
             </div>
             <div class="audience-item">
-              <strong>Services d'urgence</strong> (pompiers, police) qui utilisent ou souhaitent utiliser des drones
+              <strong>Services d'urgence</strong> (pompiers, policiers) qui utilisent ou souhaitent utiliser des drones
             </div>
             <div class="audience-item">
               <strong>Propriétaires terrains</strong> qui voudraient faire cartographier un terrain
@@ -609,10 +652,6 @@
           <div class="map-container">
             <h3><i class="fas fa-map"></i> Localisation</h3>
             <p>Derrière le CÉGEP Beauce Appalaches<br>1055 116e Rue, Saint-Georges</p>
-            <div style="margin: 2rem 0; padding: 2rem; background: white; border-radius: 15px;">
-              <i class="fas fa-map-marked-alt" style="font-size: 4rem; color: var(--dfq-red-l1)"></i>
-              <p><em>Carte interactive disponible sur le site</em></p>
-            </div>
           </div>
 
           <div class="directions">
@@ -633,19 +672,16 @@
           </div>
         </section>
 
-        <section class="section">
+        <section id="contact" class="section">
           <div class="notes-section">
             <h3><i class="fas fa-exclamation-triangle"></i> Notes importantes</h3>
             <ul class="notes-list">
-              <li>Aucun animal sur le site ne sera permis</li>
-              <li>Aucune nourriture, alcool, breuvages sauf de l'eau ne seront acceptés à l'entrée du site</li>
-              <li>Les enfants de 12 ans et moins doivent être accompagnés d'un adulte pour accéder au site</li>
-              <li>Camion cantine (food truck) sur place</li>
+              <li>Aucun animal sur le site ne sera permis,</li>
+              <li>Aucune nourriture, alcool, breuvages sauf de l'eau ne seront acceptés à l'entrée du site,</li>
+              <li>Les enfants de 12 ans et moins doivent être accompagnés d'un adulte pour accéder au site,</li>
+              <li>Camion cantine (food truck) sur place.</li>
             </ul>
           </div>
-        </section>
-
-        <section id="contact" class="section">
           <div class="contact-section">
             <h2><i class="fas fa-envelope"></i> Demande d'information</h2>
             <p>Pour toute question concernant l'événement</p>
@@ -653,7 +689,7 @@
           </div>
         </section>
 
-        <section class="section" style="text-align: center; padding: 2rem 0;">
+        <section class="section" style="display:none!important; text-align: center; padding: 2rem 0;">
           <h3 style="color: var(--dfq-red); margin-bottom: 1rem;">Commanditaires</h3>
           <p
             style="color: #666666; font-style: italic;">Les logos des partenaires seront affichés ici dès que nous aurons au moins 3 commanditaires confirmés.</p>
