--- a/index.html
+++ b/index.html
@@ -225,6 +225,12 @@
             background-clip: text;
         }
 
+        .subsection-title {
+            text-align: center;
+            margin-bottom: 2rem;
+            color: var(--dfq-red);
+        }
+
         .program-grid {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
@@ -278,6 +284,69 @@
             background-color: white;
             background-repeat: no-repeat;
             border-radius: 20px;
+        }
+
+
+        .conferences {
+            display: flex;
+            flex-direction: column;
+            align-items: stretch;
+            gap: 1rem;
+            margin: 2rem 0;
+        }
+
+        .conference {
+            position: relative;
+            background: white;
+            padding: 1rem 1.5rem;
+            border-radius: 15px;
+            border: 1px solid var(--dfq-red-l3);
+            border-left: 6px solid var(--dfq-red-l3);
+            transition: all 0.3s ease;
+            overflow: hidden;
+        }
+
+        .conference h4, .conference ul {
+            position: relative;
+            z-index: 1;
+        }
+
+        .conference i {
+            position: absolute;
+            color: var(--dfq-red-l5);
+            font-size: 10rem;
+            transform: rotate(-30deg);
+            top: 1rem;
+            right: 1rem;
+        }
+
+        .conference ul {
+            padding-left: 2.5rem;
+        }
+
+        .conference ul li::marker {
+            color: var(--dfq-red-l3);
+        }
+
+        .peek-items {
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            flex-wrap: wrap;
+            align-items: center;
+            gap: 1rem;
+        }
+
+        .peek-item h3 {
+            margin-bottom: 1rem;
+        }
+
+        .peek-item .video-container {
+            display: inline-block;
+            border-radius: 15px;
+            border: 6px solid var(--dfq-red-l3);
+            overflow: hidden;
+            box-sizing: content-box;
         }
 
         .audience-list {
@@ -546,8 +615,7 @@
           </div>
 
           <div style="margin-top: 3rem;">
-            <h3
-              style="text-align: center; margin-bottom: 2rem; color: var(--dfq-red);">Modèles de drones en démonstration</h3>
+            <h3 class="subsection-title">Modèles de drones en démonstration</h3>
             <div class="drone-models">
               <div class="drone-model">
                 DJI Mini Pro 4
@@ -589,6 +657,94 @@
               <div class="drone-model">
                 DJI Agras T50
                 <div class="drone-model-img" style="background-image: url('/DJI Agras T50.webp')"></div>
+              </div>
+            </div>
+          </div>
+
+
+          <div style="margin-top: 3rem;">
+            <h3 class="subsection-title">Conférences au programme</h3>
+            <div class="conferences">
+              <div class="conference">
+                <h4>1. Comment drones et citoyens peuvent-ils cohabiter</h4>
+                <ul class="conference-points">
+                  <li>Nouveau cadre règlementaire de Transport Canada en 2025</li>
+                  <li>Assurances</li>
+                  <li>Zones à éviter (aéroports, feux, parcs nationaux, prisons)</li>
+                  <li>Droits des citoyens</li>
+                  <li>Droits des pilotes</li>
+                  <li>Éthiques</li>
+                </ul>
+                <i class="far fa-circle-question"></i>
+              </div>
+
+              <div class="conference">
+                <h4>2. Droits et obligations pour voler dans une municipalité</h4>
+                <ul class="conference-points">
+                  <li>Cadre règlementaire applicable et souhaitable dans les municipalités</li>
+                  <li>Recommandations</li>
+                  <li>Les pièges à éviter</li>
+                </ul>
+                <i class="fas fa-shield-halved"></i>
+              </div>
+
+              <div class="conference">
+                <h4>3. Filmer comme un pro</h4>
+                <ul class="conference-points">
+                  <li>Les bases</li>
+                  <li>Trucs et précaution à prendre pour des images professionnelles</li>
+                </ul>
+                <i class="fas fa-video"></i>
+              </div>
+
+              <div class="conference">
+                <h4>4. Utilisation professionnelle des drones</h4>
+                <ul class="conference-points">
+                  <li>Environnement</li>
+                  <li>Recherche et sauvetage</li>
+                  <li>Incendies</li>
+                  <li>Cinéma</li>
+                  <li>Agriculture</li>
+                  <li>Infrastructures/inspection (bâtiments, tours, barrage, autre)</li>
+                  <li>Partir son entreprise</li>
+                </ul>
+                <i class="fas fa-handshake-simple"></i>
+              </div>
+
+              <div class="conference">
+                <h4>5. Emploi - Pilote de drones professionnel</h4>
+                <ul class="conference-points">
+                  <li>Les bases requises</li>
+                  <li>Partir son entreprise</li>
+                </ul>
+                <i class="fas fa-money-bill"></i>
+              </div>
+            </div>
+          </div>
+
+
+          <div style="margin-top: 3rem;">
+            <div class="peek-items">
+              <div class="peek-item">
+                <h3 class="subsection-title">Notre festival</h3>
+                <div class="video-container" style="height: 315px">
+                  <iframe width="560" height="315"
+                          src="https://www.youtube-nocookie.com/embed/rpnWPI9SK_M?si=GjltU2GdcyCDZj83"
+                          title="YouTube video player" frameborder="0"
+                          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                          referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                </div>
+              </div>
+
+              <div class="peek-item">
+                <h3 class="subsection-title">Les courses FPV</h3>
+                <div class="video-container" style="height: 315px">
+                  <iframe width="560" height="315"
+                          src="https://www.youtube-nocookie.com/embed/WiyzA_hJANQ?si=qa27IxmQ39Maluqu"
+                          title="YouTube video player" frameborder="0"
+                          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                          referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                </div>
               </div>
             </div>
           </div>
