- Added enlish translations

--- a/index.html
+++ b/index.html
@@ -521,6 +521,7 @@
               <li><a href="#public">Public cible</a></li>
               <li><a href="#acces">Accès</a></li>
               <li><a href="#contact">Contact</a></li>
+              <li><a href="/en">English</a></li>
             </ul>
           </nav>
         </div>
@@ -583,7 +584,7 @@
             <div class="program-card">
               <h3><i class="fas fa-racing-flag"></i> Course de drones FPV</h3>
               <p>Course de drones FPV sous un chapiteau géant dirigée par M. Ryan Walker</p>
-              <a href="https://www.youtube.com/watch?v=WiyzA_hJANQ" class="video-link" target="_blank">
+              <a href="#fpv-race" class="video-link" target="_blank">
                 <i class="fab fa-youtube"></i> Voir la vidéo
               </a>
             </div>
@@ -737,7 +738,7 @@
               </div>
 
               <div class="peek-item">
-                <h3 class="subsection-title">Les courses FPV</h3>
+                <h3 class="subsection-title" id="fpv-race">Les courses FPV</h3>
                 <div class="video-container" style="height: 315px">
                   <iframe width="560" height="315"
                           src="https://www.youtube-nocookie.com/embed/WiyzA_hJANQ?si=qa27IxmQ39Maluqu"
@@ -847,8 +848,7 @@
 
         <section class="section" style="display:none!important; text-align: center; padding: 2rem 0;">
           <h3 style="color: var(--dfq-red); margin-bottom: 1rem;">Commanditaires</h3>
-          <p
-            style="color: #666666; font-style: italic;">Les logos des partenaires seront affichés ici dès que nous aurons au moins 3 commanditaires confirmés.</p>
+          <p style="color: #666666; font-style: italic;"></p>
         </section>
       </div>
     </div>
