- Added english version of festival video and changed some video titles

--- a/en/index.html
+++ b/en/index.html
@@ -746,7 +746,7 @@
                 <h3 class="subsection-title">Our Festival</h3>
                 <div class="video-container">
                   <iframe class="video-iframe"
-                          src="https://www.youtube-nocookie.com/embed/rpnWPI9SK_M?si=GjltU2GdcyCDZj83"
+                          src="https://www.youtube-nocookie.com/embed/BzMkapwOHTs?si=9kF4RYej_yKrWBEU"
                           title="YouTube video player" frameborder="0"
                           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                           referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -754,7 +754,7 @@
               </div>
 
               <div class="peek-item">
-                <h3 class="subsection-title" id="fpv-race">The FPV Races</h3>
+                <h3 class="subsection-title" id="fpv-race">Example of an FPV race</h3>
                 <div class="video-container">
                   <iframe class="video-iframe"
                           src="https://www.youtube-nocookie.com/embed/WiyzA_hJANQ?si=qa27IxmQ39Maluqu"
