--- a/index.html
+++ b/index.html
@@ -754,7 +754,7 @@
               </div>
 
               <div class="peek-item">
-                <h3 class="subsection-title" id="fpv-race">Les courses FPV</h3>
+                <h3 class="subsection-title" id="fpv-race">Exemple de course FPV</h3>
                 <div class="video-container">
                   <iframe class="video-iframe"
                           src="https://www.youtube-nocookie.com/embed/WiyzA_hJANQ?si=qa27IxmQ39Maluqu"
