- Fixed some styling issues

--- a/en/index.html
+++ b/en/index.html
@@ -48,6 +48,7 @@
             align-items: center;
             padding: 1rem 0;
             flex-wrap: wrap;
+            gap: 0 0.75rem;
         }
 
         .logo {
@@ -522,6 +523,10 @@
 
         /* Responsive */
         @media (max-width: 768px) {
+            .logo {
+                font-size: 1.5rem;
+            }
+
             .hero {
                 background-position: center;
             }
@@ -940,11 +945,11 @@
         </section>
 
         <section class="section" style="text-align: center; padding: 2rem 0;">
-          <h3 style="color: var(--dfq-red); margin-bottom: 1rem;">Commanditaires</h3>
+          <h3 style="color: var(--dfq-red); margin-bottom: 1rem;">Sponsors</h3>
 
           <ul class="sponsor-grid">
             <li class="sponsor">
-              <img src="/sponsor/saint_georges.jpg" alt="Ville de Saint-Georges">
+              <img src="/sponsor/saint_georges.jpg" alt="City of Saint-Georges">
             </li>
             <li class="sponsor">
               <img src="/sponsor/ko_multimedia.png" alt="KO Multimédia">
