--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
             align-items: center;
             padding: 1rem 0;
             flex-wrap: wrap;
+            gap: 0 0.75rem;
         }
 
         .logo {
@@ -522,6 +523,10 @@
 
         /* Responsive */
         @media (max-width: 768px) {
+            .logo {
+                font-size: 1.5rem;
+            }
+
             .hero {
                 background-position: center;
             }
