- Updated schedule PDF - Updated sponsor section

--- a/en/index.html
+++ b/en/index.html
@@ -945,7 +945,7 @@
         </section>
 
         <section class="section" style="text-align: center; padding: 2rem 0;">
-          <h3 style="color: var(--dfq-red); margin-bottom: 1rem;">Sponsors</h3>
+          <h3 style="color: var(--dfq-red); margin-bottom: 1rem;">Collaborators and Sponsors</h3>
 
           <ul class="sponsor-grid">
             <li class="sponsor">
@@ -962,9 +962,6 @@
             </li>
             <li class="sponsor">
               <img src="/sponsor/mrc_beauce_sartigan.png" alt="MRC Beauce Sartigan">
-            </li>
-            <li class="sponsor">
-              <img src="/sponsor/chez_gerard.png" alt="Chez Gerard">
             </li>
             <li class="sponsor">
               <img src="/sponsor/boccam.png" alt="Boccam">
