- Added new sponsors

--- a/en/index.html
+++ b/en/index.html
@@ -969,6 +969,12 @@
             <li class="sponsor rounded">
               <img src="/sponsor/bourque_electrique.png" alt="Bourque Électrique">
             </li>
+            <li class="sponsor">
+              <img src="/sponsor/cambi.png" alt="CAMBI">
+            </li>
+            <li class="sponsor">
+              <img src="/sponsor/lesva.png" alt="LESVA">
+            </li>
           </ul>
         </section>
       </div>
