- Added video and favicon

--- a/index.html
+++ b/index.html
@@ -845,6 +845,17 @@
                           referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 </div>
               </div>
+
+              <div class="peek-item">
+                <h3 class="subsection-title">Un drone sous-marin</h3>
+                <div class="video-container">
+                  <iframe class="video-iframe"
+                          src="https://www.youtube-nocookie.com/embed/E4jRosj1zVI?si=k-lC-u8cbRKagCvc"
+                          title="YouTube video player" frameborder="0"
+                          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                          referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                </div>
+              </div>
             </div>
           </div>
         </section>
