- Remove FPV drone trial mention

--- a/en/index.html
+++ b/en/index.html
@@ -681,8 +681,8 @@
             </div>
 
             <div class="program-card">
-              <h3><i class="fas fa-gamepad"></i> FPV Drone Trials</h3>
-              <p>Opportunity to try small FPV drones on site</p>
+              <h3><i class="fas fa-gamepad"></i> Drone Trials</h3>
+              <p>Opportunity to try small drones on site</p>
             </div>
 
             <div class="program-card">
