--- a/index.html
+++ b/index.html
@@ -681,8 +681,8 @@
             </div>
 
             <div class="program-card">
-              <h3><i class="fas fa-gamepad"></i> Essais de drones FPV</h3>
-              <p>Possibilité d'essayer de petits drones FPV sur place</p>
+              <h3><i class="fas fa-gamepad"></i> Essais de drones</h3>
+              <p>Possibilité d'essayer de petits drones sur place</p>
             </div>
 
             <div class="program-card">
