--- a/en/index.html
+++ b/en/index.html
@@ -758,7 +758,7 @@
             <h3 class="subsection-title">Conferences on the Program</h3>
             <div class="conferences">
               <div class="conference">
-                <h4>1. How can drones and citizens coexist</h4>
+                <h4>1. How can drones and citizens coexist?</h4>
                 <ul class="conference-points">
                   <li>New regulatory framework from Transport Canada in 2025</li>
                   <li>Insurance</li>
