--- a/index.html
+++ b/index.html
@@ -758,7 +758,7 @@
             <h3 class="subsection-title">Conférences au programme</h3>
             <div class="conferences">
               <div class="conference">
-                <h4>1. Comment drones et citoyens peuvent-ils cohabiter</h4>
+                <h4>1. Comment drones et citoyens peuvent-ils cohabiter?</h4>
                 <ul class="conference-points">
                   <li>Nouveau cadre règlementaire de Transport Canada en 2025</li>
                   <li>Assurances</li>
