--- a/index.html
+++ b/index.html
@@ -618,6 +618,12 @@
       <div class="container">
         <div class="hero-content">
           <h1>Festival Drone Fan Québec 2025</h1>
+          <p class="hero-subtitle"
+             style="background-color: rgba(0,0,0,0.7); border-radius: 10px; margin-top: 5rem; margin-bottom: 5rem">
+            L'événement a lieu malgré la pluie. On vous attend en grand nombre!
+            <br>
+            <span style="font-size: 0.75em">(mis à jour le 30 août)</span>
+          </p>
           <p class="hero-subtitle">
             <img src="/Flag_of_Quebec.png" style="height: 1em" alt="QC">
             Premier événement québécois dédié exclusivement au monde des drones
