--- a/en/index.html
+++ b/en/index.html
@@ -622,7 +622,7 @@
              style="background-color: rgba(0,0,0,0.7); border-radius: 10px; margin-top: 5rem; margin-bottom: 5rem">
             The event will take place despite the rain. We look forward to seeing you in large numbers!
             <br>
-            <span style="font-size: 0.75em">(updated on August 30th)</span>
+            <span style="font-size: 0.75em">(updated on August 30)</span>
           </p>
           <p class="hero-subtitle">
             <img src="/Flag_of_Quebec.png" style="height: 1em" alt="QC">
